# engram

./: .agentmemory  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/skills/agent-memory/: README.md  SKILL.md
.claude/skills/audit-templates/: SKILL.md
.claude/skills/check-schema/: SKILL.md
.claude/skills/engram/: SKILL.md
.claude/skills/verify-branch/: SKILL.md
.claude/skills/writing-dx-overview/: SKILL.md
.superpowers/sdd/: final-review-fix-report.md
docs/: CONSTITUTION.md  engram-verification.md
docs/superpowers/plans/: 2026-06-28-engram-v0.1.md
docs/superpowers/specs/: 2026-06-28-engram-DX.html  2026-06-28-engram-design.html  2026-06-28-engram-design.md
engram-data/: index.md
engram-data/.obsidian/: workspace.json
engram-data/Engineering/: index.md
engram-data/Engineering/AI/: index.md
engram-data/Engineering/Foundations/: index.md
engram-data/Engineering/Infrastructure/: index.md
engram-data/Engineering/Languages/: index.md
launchd/: com.krishna.engram.ready.plist
src/engram_mcp/: constitution.py  folders.py  frontmatter.py  index.py  links.py  markdown.py  notes.py  search.py  server.py  vault.py
tests/: conftest.py  test_constitution.py  test_folders.py  test_frontmatter.py  test_index.py  test_links.py  test_markdown.py  test_notes_read.py  test_notes_write.py  test_search.py  test_server.py  test_smoke.py  test_vault.py
