[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-mcp"
version = "0.1.0"
description = "Engram: structure-aware filesystem MCP server over a Markdown vault."
requires-python = ">=3.13"
dependencies = ["mcp>=1.2", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
engram-mcp = "engram_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/engram_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
